Bunch of minor fixes.
Stuff I noticed while revising the print edition.

--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -174,7 +174,7 @@ introduce abstractions at those points. Likewise, you have to determine where
 extensibility should be engineered in so future changes are easier to make.</p>
 <p>People get really excited about this. They envision future developers (or just
 their future self) stepping into the codebase and finding it open-ended,
-powerful, and just beckoning to be extended. They imagine the One Game Engine To
+powerful, and just beckoning to be extended. They imagine The One Game Engine To
 Rule Them All.</p>
 <p>But this is where it starts to get tricky. Whenever you add a layer of
 abstraction or a place where extensibility is supported, you&#8217;re <em>speculating</em>
