--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -435,7 +435,7 @@ class="pattern">Update Method</a> pattern.</p>
 
 <p>Now, we need to call that from somewhere convenient. What &#8220;convenient&#8221; means
 depends on your game. It may mean calling it from the main <a
-href="game-loop.html" class="pattern">Game Loop</a> or from a dedicated audio
+href="game-loop.html" class="pattern">game loop</a> or from a dedicated audio
 thread.</p>
 <p>This works fine, but it does presume we can process <em>every</em> sound request in a
 single call to <code>update()</code>. If you&#8217;re doing something like processing a request
