--- a/html/spatial-partition.html
+++ b/html/spatial-partition.html
@@ -523,9 +523,9 @@ rows out.</p>
 <p>There&#8217;s a relatively short list of well-defined spatial partitioning data
 structures, and one option would be to go through them one at a time here.
 Instead, I tried to organize this by their essential characteristics. My hope is
-that once you do learn about quadtrees and BSPs and the like, this will help you
-understand <em>how</em> and <em>why</em> they work and why you might choose one over the
-other.</p>
+that once you do learn about quadtrees and binary space partitions (BSPs) and
+the like, this will help you understand <em>how</em> and <em>why</em> they work and why you
+might choose one over the other.</p>
 <h3><a href="#is-the-partition-hierarchical-or-flat" name="is-the-partition-hierarchical-or-flat">Is the partition hierarchical or flat?</a></h3>
 <p>Our grid example partitioned space into a single flat set of cells. In contrast,
 hierarchical spatial partitions divide the space into just a <span
