--- a/html/update-method.html
+++ b/html/update-method.html
@@ -718,7 +718,7 @@ collection that avoids them during your core game loop.</p>
 <li>
 <p>This pattern, along with <a href="game-loop.html"
     class="pattern">Game Loop</a> and <a href="component.html"
-    class="pattern">Component</a>, is part of a triinity that often forms the nucleus of a game engine.</p>
+    class="pattern">Component</a>, is part of a trinity that often forms the nucleus of a game engine.</p>
 </li>
 <li>
 <p>When you start caring about the cache performance of updating a bunch of
