--- a/html/type-object.html
+++ b/html/type-object.html
@@ -439,7 +439,7 @@ things like custom allocators or the <a class="pattern"
 href="object-pool.html">Object Pool</a> pattern to control where in memory our
 objects end up.</p>
 <p>Defining a &#8220;constructor&#8221; function in <code>Breed</code> gives us a place to put that logic.
-Instead of simply calling <code>new</code>, the <code>newMonster</code> function can pull the memory
+Instead of simply calling <code>new</code>, the <code>newMonster()</code> function can pull the memory
 from a pool or custom heap before passing control off to <code>Monster</code> for
 initialization. By putting this logic inside <code>Breed</code>, in the <em>only</em> function
 that has the ability to create monsters, we ensure that all monsters go through
