Broken “observer.html#it's-too-slow” anchor and reference fix

--- a/html/observer.html
+++ b/html/observer.html
@@ -306,7 +306,7 @@ frameworks.</p>
 game programmers what
 they think about this pattern, I hear a few common complaints. Let&#8217;s see what we
 can do to address them, if anything.</p>
-<h2><a href="#"it's-too-slow"" name=""it's-too-slow"">&#8220;It&#8217;s Too Slow&#8221;</a></h2>
+<h2><a href="#it's-too-slow" name="it's-too-slow">&#8220;It&#8217;s Too Slow&#8221;</a></h2>
 <p>I hear this a lot, often from programmers who don&#8217;t actually know the details of
 the pattern. They have a default assumption that anything that smells like a
 &#8220;design pattern&#8221; must involve piles of classes and indirection and other
